--- a/flow/style.css
+++ b/flow/style.css
@@ -538,7 +538,7 @@ body {
 
 
 /*------------------------------------*\
-   Footer
+   Embed
 \*------------------------------------*/
 
 .notion-embed__container {
