--- a/super/components/footer/corners.css
+++ b/super/components/footer/corners.css
@@ -88,7 +88,7 @@
 @media only screen and (max-width: 600px) {
   
   /*Resize width*/
-.super-footer.floating {
+.super-footer.corners {
   width: var(--footer-width-responsive);
 }
   
