--- a/super/components/footer/corners.css
+++ b/super/components/footer/corners.css
@@ -6,7 +6,7 @@
     --footer-background-color: #F0F3F4 !important;
     
     /*Width*/
-     --footer-corners-width: 80px 300px !important;
+    --footer-corners-width: 80px 300px !important;
     --footer-width-responsive: 90% !important;
     
     /*icons*/
@@ -34,7 +34,7 @@
 
 /*Resize width*/
 .super-footer.corners {
-  padding: var(--footer-corners-width);
+  padding: var(--footer-corners-width) !important;
 } 
 
 /*ICONS*/
