--- a/super/components/footer/corners.css
+++ b/super/components/footer/corners.css
@@ -23,7 +23,7 @@
     
     /*Footnote*/
     --footer-footnote-color: #161616 !important;
-    --footer-footnote-size: var(--footer-links-size);
+    --footer-footnote-size: var(--footer-links-size) !important;
     --footer-footnote-align: center !important;
 }
 
@@ -33,7 +33,7 @@
 
 /*Resize width*/
 .super-footer.corners {
-  padding: var(--footer-corners-width) ;
+  padding: var(--footer-corners-width) !important;
 } 
 
 /*ICONS*/
