--- a/super/components/footer/corners.css
+++ b/super/components/footer/corners.css
@@ -8,7 +8,7 @@
     --footer-corners-width: 80px 450px !important;
 
     /*icons*/
-    --footer-icons-colors: green !important;
+    --footer-icons-colors: #161616 !important;
     --footer-icons-gap: 30px !important;
     --footer-icons-hover: #fdb933 !important;
     
