--- a/super/components/callout-sections.css
+++ b/super/components/callout-sections.css
@@ -9,7 +9,7 @@
   --inner-callout-padding: 1rem 1.8rem 0.8rem 0.5rem !important;
   
   
-  /*Inside Callout colors*/
+  /*Inner Callouts colors*/
   
   /*Default*/
   --inner-default-bg: #ffffff !important;
