--- a/super/components/callout-sections.css
+++ b/super/components/callout-sections.css
@@ -47,7 +47,7 @@
   --inner-blue-text: black !important;
   --inner-blue-border: none !important;
   
-  
+  /*Purple*/
   --inner-purple-bg: #93288d !important;
   --inner-purple-text: white !important;
   --inner-purple-border: none !important;
