--- a/super/components/callout-sections.css
+++ b/super/components/callout-sections.css
@@ -7,6 +7,7 @@
   --layout-max-width: 1100px !important;
   --inner-callout-radius: 8px !important;
   --inner-callout-padding: 1rem 1.8rem 0.8rem 0.5rem !important;
+  --callout-icon-display: none !important;
   
   
   /*Inner Callouts colors*/
