--- a/super/components/callout-sections.css
+++ b/super/components/callout-sections.css
@@ -6,7 +6,7 @@
 :root {
   --layout-max-width: 1100px !important;
   --inner-callout-radius: 8px !important;
-  --inner-callout-padding: 1rem 1.8rem 0.8rem 0.5rem !important;
+  --inner-callout-padding: 0.8rem 1.8rem 0.8rem 1.8rem !important;
   --callout-icon-display: none !important;
   
   
@@ -93,7 +93,7 @@
 	color: var(--inner-default-text);
 	border: var(--inner-default-border) !important;
 	border-radius: var(--inner-callout-radius) !important;
-	padding: var(--inner-callout-padding);
+	padding: var(--inner-callout-padding) !important;
 }
 
 
