--- a/super/components/callout-sections.css
+++ b/super/components/callout-sections.css
@@ -7,6 +7,7 @@
   --layout-max-width: 1100px !important;
   --inner-callout-radius: 8px !important;
   --inner-callout-padding: 0.8rem 1.8rem 0.8rem 1.8rem !important;
+  --column-spacing: 20px !important;
   --callout-icon-display: none !important;
   
   
@@ -81,8 +82,25 @@
   margin: auto !important;
 }
 
+/*Horizontal space between*/
+.notion-column {
+  gap: var(--column-spacing) !important;
+}
+
+/*Remove start margin*/
 .notion-callout__content {
   margin-inline-start: 0px !important;
+}
+
+/*Callout icon reposition*/
+.notion-callout__icon {
+    max-width: 0px !important;
+    height: 100% !important;
+    position: relative !important;
+    top: 2px !important;
+    left: -4px !important;
+    margin-inline-start: 0px !important;
+    margin-inline-end: 5px !important;
 }
 
 
