--- a/super/components/callout-sections.css
+++ b/super/components/callout-sections.css
@@ -7,11 +7,21 @@
   --layout-max-width: 1100px !important;
   --inner-callout-radius: 8px !important;
   --inner-callout-padding: 0.8rem 1.8rem 0.8rem 1.8rem !important;
-  --column-spacing: 20px !important;
+  
+  /*Show or Hide callout icon*/
   --callout-icon-display: none !important;
   
+  /*Space between columns*/
+  --col-spacing-hor: 20px !important;
+  --col-spacing-ver: 0px !important;
+
   
-  /*Inner Callouts colors*/
+
+  /*----------------------*/
+  
+
+  
+  /*Inside Callout colors*/
   
   /*Default*/
   --inner-default-bg: #ffffff !important;
@@ -84,20 +94,28 @@
 
 /*Horizontal space between*/
 .notion-column {
-  gap: var(--column-spacing) !important;
+  gap: var(--col-spacing-ver) !important;
 }
+
+
+/*Vertical space between*/
+:root {
+  --column-spacing: var(--col-spacing-hor) !important;
+}
+
 
 /*Remove start margin*/
 .notion-callout__content {
   margin-inline-start: 0px !important;
 }
 
+
 /*Callout icon reposition*/
 .notion-callout__icon {
     max-width: 0px !important;
     height: 100% !important;
-    position: relative !important;
-    top: 2px !important;
+    position: relative;
+    top: 2px;
     left: -4px !important;
     margin-inline-start: 0px !important;
     margin-inline-end: 5px !important;
