--- a/super/components/list.css
+++ b/super/components/list.css
@@ -1,5 +1,5 @@
 /*------------------------------------*\
-   Collection List Database
+   List Database
 \*------------------------------------*/
 
 :root {
