--- a/super/components/toggle-tabs/symbol-left.css
+++ b/super/components/toggle-tabs/symbol-left.css
@@ -48,11 +48,13 @@ Author: Luis Rincon @rinconelloinc
   text-align: left !important;
   position: relative !important;
   transition: 0.3s ease-in-out !important;
+  outline: var(--toggle-border) !important;
 }
+
 
 .notion-toggle:hover {
   background: var(--toggle-hover-bg) !important;
-  outline: var(--toggle-hover-border);
+  outline: var(--toggle-hover-border) !important;
 }
 
 
