--- a/super/components/password-page.css
+++ b/super/components/password-page.css
@@ -2,11 +2,10 @@
    Password Customization
 \*---------------------------------*/
 
-
 :root {
   --psw-content: "New site 🚧 Under construction" !important;
-  --psw-background: #fdb933 !important;
-  --psw-text-color: #161616 !important;
+  --psw-background: #fdb933;
+  --psw-text-color: #161616;
 }
 
 /*----------------------*/
@@ -19,8 +18,8 @@ visibility: visible !important;
 
 /*Background color*/
 .super-password-protection {
-    background: var(--psw-background);
-    color: var(--psw-text-color);
+    background: var(--psw-background) !important;
+    color: var(--psw-text-color) !important;
 }
 
 .super-password-protection__title {
